--- a/corlaxx/cloraxx.html
+++ b/corlaxx/cloraxx.html
@@ -3,6 +3,8 @@
  <body>
 <canvas id="canvas" width="2000" height="2000"></canvas>
 <button id="heart"> Heart </button>
+<button id="circle"> Circle </button>
+<button id="green"> Green </button>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="cloraxx.js"></script>
  </body>
