--- a/corlaxx/cloraxx.html
+++ b/corlaxx/cloraxx.html
@@ -9,6 +9,6 @@
 <button id="white"> Eraser </button>
 <button id="yellow"> Yellow </button>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="cloraxx.js"></script>
+<script type="text/javascript" src="/js/cloraxx.js"></script>
  </body>
 </html>
