--- a/corlaxx/cloraxx.html
+++ b/corlaxx/cloraxx.html
@@ -7,6 +7,7 @@
 <button id="circle"> Circle </button>
 <button id="green"> Green </button>
 <button id="white"> Eraser </button>
+<img src="/templates/eraser.png"></img>
 <button id="yellow"> Yellow </button>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="cloraxx.js"></script>
