eraser identity added with colors

--- a/corlaxx/cloraxx.html
+++ b/corlaxx/cloraxx.html
@@ -6,8 +6,7 @@
 <button id="heart"> Heart </button>
 <button id="circle"> Circle </button>
 <button id="green"> Green </button>
-<button id="white"> Eraser </button>
-<img src="/templates/eraser.png"></img>
+<img id="white" src="/templates/eraser.png"></img>
 <button id="yellow"> Yellow </button>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="/js/cloraxx.js"></script>
