--- a/corlaxx/cloraxx.html
+++ b/corlaxx/cloraxx.html
@@ -6,6 +6,14 @@
 <button id="heart"> Heart </button>
 <button id="circle"> Circle </button>
 <button id="green"> Green </button>
+<button id="blue"> Light Blue </button>
+<button id="brown"> Brown </button>
+<button id="red"> Red </button>
+<button id="orange"> Orange </button>
+<button id="purple"> Purple </button>
+<button id="darkblue"> Dark Blue </button>
+<button id="black"> Black </button>
+<button id="pink"> Pink </button>
 <img id="white" src="/templates/eraser.png"></img>
 <button id="yellow"> Yellow </button>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
