--- a/corlaxx/cloraxx.html
+++ b/corlaxx/cloraxx.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
  <body>
-   <h1>WELCOME TO CORLAXX</h1>
+   <h1>Time To Color + Relax!</h1>
 <canvas id="canvas" width="2000" height="2000"></canvas>
 <button id="heart"> Heart </button>
 <button id="circle"> Circle </button>
+<button id="spiral"> Spiral </button>
 <button id="green"> Green </button>
 <button id="blue"> Light Blue </button>
 <button id="brown"> Brown </button>
