--- a/corlaxx/cloraxx.html
+++ b/corlaxx/cloraxx.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Corlaxx</title>
+  <link rel="stylesheet" type="text/css" href="stylesheet/style.css">
+</head>
  <body>
-   <h1>WELCOME TO CORLAXX</h1>
+
+   <h1 font-size= "36px"> Prepare for Maximum Relaxation </h1>
+
 <canvas id="canvas" width="2000" height="2000"></canvas>
 <button id="heart"> Heart </button>
 <button id="circle"> Circle </button>
 <button id="green"> Green </button>
-<img id="white" src="/templates/eraser.png"></img>
+<img id="white" src="/templates/eraser.png" height="20px" width="50px"></img>
 <button id="yellow"> Yellow </button>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="/js/cloraxx.js"></script>
